<resources>
    <string name="app_name">Blue Sea</string>
    <string name="signup">إنشاء حساب</string>
    <string name="username">اسم المستخدم</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="password">كلمة السر</string>
    <string name="have_an_account">لديك حساب؟</string>
    <string name="log_in">تسجيل دخول</string>
    <string name="date_sample">29 أبريل</string>
    <string name="available_seats">مقاعد متوفرة</string>
    <string name="booked">محجوز</string>
    <string name="book">احجز</string>
    <string name="trip_status">حالة الرحلة</string>
    <string name="to_destination">إلى الوجهة</string>
    <string name="invalid_email">البريد الالكتروني غير صالح</string>
    <string name="invalid_password_length">كلمة المرور قصيرة</string>
    <string name="login_error">حدث خطأ لا يمكن تسجيل الدخول</string>
    <string name="failed_sign_up">فشل التسجيل</string>
    <string name="email_empty">لا يمكن ان يكون حقل البريد الالكتروني فارغ</string>
    <string name="password_empty">لا يمكن ان يكون حقل كلمة المرور فارغ</string>
    <string name="username_is_empty">لا يمكن ان يكون حقل اسم المسنخدم فارغ</string>
    <string name="photo_selection_error">خطأ في اختيا الصورة</string>
    <string name="choose_photo">اختر صورة</string>
    <string name="add_user_success">نجح في اضافة المستخدم</string>
    <string name="select_photo">اختر صورة</string>
    <string name="account_details">تفاصيل الحساب</string>
    <string name="sign_out">تسجيل الخروج</string>
    <string name="profile_setting">اعدادات المستخدم</string>
    <string name="profile_image">صورة المستخدم</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="reserve_done">تم حجز الرحلة</string>
    <string name="reserve_failed">فشل في حجز الرحلة</string>
    <string name="you_have_arrived">لقد وصلت</string>
    <string name="this_email_exists"> البريد الالكتروني الذي تم ادخال موجود مسبقا</string>
    <string name="not_available">غير متوفر</string>
    <string name="current_trip">رحلة جارية</string>
    <string name="can_not_book_trip_in_same_date">لا يمكن حجز رحلتين في يوم واحد</string>
    <string name="book_trip_failed">حدث خطأ في حجز الرحلة</string>
    <string name="no_seat_available">لا يوجد مقاعد متوفرة</string>
    <string name="trip_not_available">الرحلة غير متوفرة</string>
    <string name="trip_start">الرحلة جارية</string>
    <string name="error">حدث خطأ</string>
</resources>
